Atualização Pag. Pesquisa
Implementação das páginas de pesquisa Servidores e Câmara

--- a/site/camara.html
+++ b/site/camara.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 
 <head>
-    <title>De Olho Mogi das Cruzes</title>
+    <title>De Olho na Câmara</title>
     <meta charset="utf-8">
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/components/navbar/">
     <link rel="stylesheet" type="text/css" href="bootstrap-4.4.1/dist/css/bootstrap.min.css"> 
@@ -31,59 +31,34 @@
         </nav>
     </header>
 
-    <div id="fundo-mogi" class= "img-mogi img-fluid background-branco">
-        <div class="container justify-content-center align-items-center text-center">
-            <div class="row ">
-                <div class="col-12 py-5 text-center">
-                    <p class="titulo-mogi">De Olho Mogi das Cruzes</p>
+    <div class="background-branco">
+        <div class="container pt-4">
+            <div class="row">
+                <div class="col-1 p-0 text-center">
+                    <i class="fa fa-university fa-5x py-3" aria-hidden="true"></i>
                 </div>
-                <div class="col-12 py-5">
-                    <form action="search.php" method="GET" class="fc my-2 my-lg-0"> 
-                        <input size="75%" type="text" autocomplete="on" name="q" placeholder="Digite a sua pesquisa">
-                        <input type="submit" value="Pesquisar" class="btn btn-outline-success">
-                    </form>             
+                <div class="col-6 pt-3">
+                    <h1>De Olho na Câmara</h1>
+                    <p>Vereadores e projetos de lei apresentados:</p>
                 </div>
             </div>
-        </div>
-    </div>
-
-    <div class="menu-body py-5 background-branco">
-        <div class="container">
-            <div class="row text-center">
-                <div class="col-12 col-sm-6 col-md-6 col-lg-3 pt-3">
-                    <div class="content">
-                        <a href="#">
-                        <i class="fa fa-line-chart fa-5x py-3" aria-hidden="true"></i>
-                        <h2 class="pb-3">Despesas Públicas</h2>
-                        <p>Saiba como estão sendo gastos os Recursos Públicos pela Prefeitura</p>
-                        </a>
-                    </div>
+            <div class="pesquisa">
+                <p>Pesquisar por:<p>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="pesquisaVereador" id="pesquisaVereador1" value="option1" checked>
+                    <label class="form-check-label" for="pesquisaVereador1">
+                        Nome
+                    </label>
                 </div>
-                <div class="col-12 col-sm-6 col-md-6 col-lg-3 pt-3">
-                    <div class="content">
-                        <a href="servidores.html">
-                        <i class="fa fa-users fa-5x py-3" aria-hidden="true"></i>
-                        <h2 class="pb-3">Servidores Públicos</h2>
-                        <p>Folha de Pagamento e Gastos com servidores públicos</p>
-                        </a>
-                    </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="pesquisaVereador" id="pesquisaVereador2" value="option2">
+                    <label class="form-check-label" for="pesquisaVereador2">
+                        Ano
+                    </label>
                 </div>
-                <div class="col-12 col-sm-6 col-md-6 col-lg-3 pt-3">
-                    <div class="content">
-                        <a href="camara.html">
-                        <i class="fa fa-university fa-5x py-3" aria-hidden="true"></i>
-                        <h2 class="pb-3">De Olho na Câmara</h2>
-                        <p>Acompanhe os projetos apresentados pelos vereadores e seus votos nas sessões da Câmara</p>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6 col-md-6 col-lg-3 pt-3">
-                    <div class="content">
-                        <a href="#">
-                        <i class="fa fa-building fa-5x py-3" aria-hidden="true"></i>
-                        <h2 class="pb-3">Obras <br> Públicas</h2>
-                        <p>Informações sobre Obras Públicas, custos e origem de recursos</p>
-                        </a>
+                <div class="form-group row">
+                    <div class="col-sm-10 my-4">
+                        <button type="submit" class="btn btn-outline-succes">Pesquisar</button>
                     </div>
                 </div>
             </div>
@@ -116,7 +91,6 @@
             
         </div>
     </div>
-
     <footer>
         <div class="text-center">
             <p class="texto-footer">
