--- a/HTML_gK/index.html
+++ b/HTML_gK/index.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8">
 		<title>De Olho Mogi</title>
 		<link rel="stylesheet" type="text/css" href="style.css"/>
+		<link rel="shortcut icon" href="logo.png" sizes="32x32" type="image/png">
 	</head>
 	
 	<body>
@@ -25,6 +26,17 @@
 		</header>
 		
 		<!--Conteúdo-->
+		<form method="get" action="01valor.php">
+			Nome:<input type="text" name="nome"/><br/>
+			Ano de Nascimento:<input type"number" name="ano"/><br/>
+			<fieldset><legend>Sexo</legend>
+				<input type="radio" name="sexo" id="masc" value="homem"/>
+				<label for="masc">Masculino</label><br/>
+				<input type="radio" name "sexo" id="fem" value="mulher"/>
+				<label for="fem">Feminino</label>
+			<fielset><br/>
+			<input type="submit" value="Enviar"/>
+		</form>
 		<div id="principal"> 
 			<div class="container">
 				<h1>Bem-vindo a página De Olho Mogi</h1>
