--- a/site/camara.html
+++ b/site/camara.html
@@ -23,9 +23,9 @@
             <div class="navbar-collapse collapse" id="navbarNavDropdown" style>
                 <div class="navbar-nav">
                     <a class="nav-item nav-link active" href="projeto_interface.html">Home <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="#">Quem Somos</a>
-                    <a class="nav-item nav-link" href="#">Contato</a>
-                    <a class="nav-item nav-link" href="#">Sobre o Site</a>
+                    <a class="nav-item nav-link" href="quemsomos.html">Quem Somos</a>
+                    <a class="nav-item nav-link" href="contato.html">Contato</a>
+                    <a class="nav-item nav-link" href="sobreosite.html">Sobre o Site</a>
                 </div>
             </div>
         </nav>
@@ -33,32 +33,33 @@
 
     <div class="background-branco">
         <div class="container pt-4">
-            <div class="row">
-                <div class="col-1 p-0 text-center">
-                    <i class="fa fa-university fa-5x py-3" aria-hidden="true"></i>
-                </div>
-                <div class="col-6 pt-3">
-                    <h1>De Olho na Câmara</h1>
-                    <p>Vereadores e projetos de lei apresentados:</p>
-                </div>
+            <div>
+                <h1>De Olho na Câmara</h1>
+                <p>Consulte os projetos de lei :</p>
             </div>
             <div class="pesquisa">
                 <p>Pesquisar por:<p>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="pesquisaVereador" id="pesquisaVereador1" value="option1" checked>
-                    <label class="form-check-label" for="pesquisaVereador1">
-                        Nome
+                <div class="form-check ml-5">
+                    <input class="form-check-input" type="radio" name="pesquisaServidor" id="pesquisaServidor1" value="option1" checked>
+                    <label class="form-check-label" for="pesquisaServidor1">
+                        Autor
                     </label>
                 </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="pesquisaVereador" id="pesquisaVereador2" value="option2">
-                    <label class="form-check-label" for="pesquisaVereador2">
-                        Ano
+                <div class="form-check ml-5">
+                    <input class="form-check-input" type="radio" name="pesquisaServidor" id="pesquisaServidor2" value="option2">
+                    <label class="form-check-label" for="pesquisaServidor2">
+                        Assunto
                     </label>
+                </div>
+                <div class="form-check ml-5">
+                    <input class="form-check-input" type="radio" name="pesquisaServidor" id="pesquisaServidor3" value="option3">
+                    <label class="form-check-label" for="pesquisaServidor3">
+                        Anotação
+                    </label>                    
                 </div>
                 <div class="form-group row">
                     <div class="col-sm-10 my-4">
-                        <button type="submit" class="btn btn-outline-succes">Pesquisar</button>
+                        <button type="submit" class="btn btn-outline-succes ml-5">Pesquisar</button>
                     </div>
                 </div>
             </div>
@@ -71,9 +72,9 @@
                 <div class="col-4">
                     
                     <h2 class="font-weight-bold pb-2">Links úteis:</h2>
-                    <p class="mb-0"><a class="link-icone" href="#">- Prefeitura de Mogi das Cruzes</a></p>
-                    <p class="mb-0"><a class="link-icone" href="#">- Câmara de Mogi das Cruzes</a></p>
-                    <p><a class="link-icone" href="#">- Portal da Transparência de Mogi</a></p>
+                    <p class="mb-0"><a class="link-icone opt" href="http://www.mogidascruzes.sp.gov.br/" target="_blank">- Prefeitura de Mogi das Cruzes</a></p>
+                    <p class="mb-0"><a class="link-icone opt" href="http://www.cmmc.com.br/" target="_blank">- Câmara de Mogi das Cruzes</a></p>
+                    <p><a class="link-icone opt" href="http://www.transparencia.pmmc.com.br/" target="_blank">- Portal da Transparência de Mogi</a></p>
                     </a>
                 </div>
                 <div class="col-4">
