--- a/site/projeto_interface.html
+++ b/site/projeto_interface.html
@@ -23,9 +23,9 @@
             <div class="navbar-collapse collapse" id="navbarNavDropdown" style>
                 <div class="navbar-nav">
                     <a class="nav-item nav-link active" href="projeto_interface.html">Home <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="#">Quem Somos</a>
-                    <a class="nav-item nav-link" href="#">Contato</a>
-                    <a class="nav-item nav-link" href="#">Sobre o Site</a>
+                    <a class="nav-item nav-link" href="quemsomos.html">Quem Somos</a>
+                    <a class="nav-item nav-link" href="contato.html">Contato</a>
+                    <a class="nav-item nav-link" href="sobreosite.html">Sobre o Site</a>
                 </div>
             </div>
         </nav>
@@ -53,36 +53,36 @@
                 <div class="col-12 col-sm-6 col-md-6 col-lg-3 pt-3">
                     <div class="content">
                         <a href="#">
-                        <i class="fa fa-line-chart fa-5x py-3" aria-hidden="true"></i>
-                        <h2 class="pb-3">Despesas Públicas</h2>
-                        <p>Saiba como estão sendo gastos os Recursos Públicos pela Prefeitura</p>
+                            <i class="fa fa-line-chart fa-5x py-3" aria-hidden="true"></i>
+                            <h2 class="pb-3">Receitas e Despesas</h2>
+                            <p>Saiba como estão sendo gastos os Recursos Públicos pela Prefeitura</p>
                         </a>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-6 col-lg-3 pt-3">
                     <div class="content">
                         <a href="servidores.html">
-                        <i class="fa fa-users fa-5x py-3" aria-hidden="true"></i>
-                        <h2 class="pb-3">Servidores Públicos</h2>
-                        <p>Folha de Pagamento e Gastos com servidores públicos</p>
+                            <i class="fa fa-users fa-5x py-3" aria-hidden="true"></i>
+                            <h2 class="pb-3">Servidores Públicos</h2>
+                            <p>Folha de Pagamento e Gastos com servidores públicos</p>
                         </a>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-6 col-lg-3 pt-3">
                     <div class="content">
                         <a href="camara.html">
-                        <i class="fa fa-university fa-5x py-3" aria-hidden="true"></i>
-                        <h2 class="pb-3">De Olho na Câmara</h2>
-                        <p>Acompanhe os projetos apresentados pelos vereadores e seus votos nas sessões da Câmara</p>
+                            <i class="fa fa-university fa-5x py-3" aria-hidden="true"></i>
+                            <h2 class="pb-3">De Olho na Câmara</h2>
+                            <p>Acompanhe os projetos apresentados pelos vereadores e seus votos nas sessões da Câmara</p>
                         </a>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-6 col-lg-3 pt-3">
                     <div class="content">
                         <a href="#">
-                        <i class="fa fa-building fa-5x py-3" aria-hidden="true"></i>
-                        <h2 class="pb-3">Obras <br> Públicas</h2>
-                        <p>Informações sobre Obras Públicas, custos e origem de recursos</p>
+                            <i class="fa fa-building fa-5x py-3" aria-hidden="true"></i>
+                            <h2 class="pb-3">Obras <br> Públicas</h2>
+                            <p>Informações sobre Obras Públicas, custos e origem de recursos</p>
                         </a>
                     </div>
                 </div>
@@ -96,9 +96,9 @@
                 <div class="col-4">
                     
                     <h2 class="font-weight-bold pb-2">Links úteis:</h2>
-                    <p class="mb-0"><a class="link-icone" href="#">- Prefeitura de Mogi das Cruzes</a></p>
-                    <p class="mb-0"><a class="link-icone" href="#">- Câmara de Mogi das Cruzes</a></p>
-                    <p><a class="link-icone" href="#">- Portal da Transparência de Mogi</a></p>
+                    <p class="mb-0"><a class="link-icone opt" href="http://www.mogidascruzes.sp.gov.br/" target="_blank">- Prefeitura de Mogi das Cruzes</a></p>
+                    <p class="mb-0"><a class="link-icone opt" href="http://www.cmmc.com.br/" target="_blank">- Câmara de Mogi das Cruzes</a></p>
+                    <p><a class="link-icone opt" href="http://www.transparencia.pmmc.com.br/" target="_blank">- Portal da Transparência de Mogi</a></p>
                     </a>
                 </div>
                 <div class="col-4">
