--- a/HTML_gK/index.html
+++ b/HTML_gK/index.html
@@ -17,47 +17,15 @@
 				</div>
 				
 				<div id="menu">
-					<a href="#">Home</a>
-					<a href="#">Quem somos</a>
+					<a href="index.html">Home</a>
+					<a href="criadores.html">Sobre os desenvolvedores</a>
 					<a href="#">Serviços</a>
-					<a href="#">Fale conosco</a>
+					<a href="fale_conosco.html">Fale conosco</a>
 				</div>
 			</div>
 		</header>
 		
 		<!--Conteúdo-->
-		<nav>
-			<div>
-				<form method="get" action="01valor.php">
-					Nome:<input type="text" name="nome"/><br/>
-					Ano de Nascimento:<input type"number" name="ano"/><br/>
-					<fieldset><legend>Sexo</legend>
-						<input type="radio" name="sexo" id="masc" value="homem"/>
-						<label for="masc">Masculino</label><br/>
-						<input type="radio" name="sexo" id="fem" value="mulher"/>
-						<label for="fem">Feminino</label>
-					<fielset><br/>
-					<input type="submit" value="Enviar"/>
-				</form>
-			</div>
-			<div>
-				<form method="get" action="01valor.php">
-					<label for="itxt">Texto:</label>
-					<input type="text" name="t" id="itxt"/><br/>
-					<label for="itam">Tamanho:</label>
-					<select name="tam" id="itam">
-						<option value="8pt">8</option>
-						<option value="10pt">10</option>
-						<option value ="14pt" selected>14</option>
-						<option value="20pt">20</option>
-						<option value="40pt">40</option>
-					</select><br/>
-					<label for="icor">Cor:</label>
-					<input type="color" name="cor" id="icor"/><br/>
-					<input type="submit" value="Gerar"/>
-				</form>
-			</div>
-		</nav>
 		<div id="principal"> 
 			<div class="container">
 				<h1>Bem-vindo a página De Olho Mogi</h1>
