--- a/HTML_gK/criadores.html
+++ b/HTML_gK/criadores.html
@@ -20,13 +20,13 @@
 					<a href="index.html">Home</a>
 					<a href="criadores.html">Sobre os desenvolvedores</a>
 					<a href="#">Serviços</a>
-					<a href="fale_conosco.html">Fale conosco</a>
+					<a href="fale_conosco.html">Feedback</a>
 				</div>
 			</div>
 		</header>
 		
 		<!--Conteúdo-->	
-		<div id="principal">
+		<div id="criadores">
 			<div>
 					<h1>Informações sobre os desenvolvedores</h1>
 				<div class="efeito">
