--- a/HTML_gK/index.html
+++ b/HTML_gK/index.html
@@ -20,7 +20,7 @@
 					<a href="index.html">Home</a>
 					<a href="criadores.html">Sobre os desenvolvedores</a>
 					<a href="#">Serviços</a>
-					<a href="fale_conosco.html">Fale conosco</a>
+					<a href="fale_conosco.html">Feedback</a>
 				</div>
 			</div>
 		</header>
