--- a/HTML_gK/fale_conosco.html
+++ b/HTML_gK/fale_conosco.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="utf-8">
-		<title>Feedback</title>
+		<title>Avalie o site</title>
 		<link rel="stylesheet" type="text/css" href="style.css"/>
 		<link rel="shortcut icon" href="logo.png" sizes="32x32" type="image/png">
 	</head>
@@ -18,9 +18,9 @@
 				
 				<div id="menu">
 					<a href="index.html">Home</a>
-					<a href="criadores.html">Sobre os desenvolvedores</a>
-					<a href="#">Serviços</a>
-					<a href="fale_conosco.html">Feedback</a>
+					<a href="criadores.html">Desenvolvedores</a>
+					<a href="listar.php">Servidores Públicos</a>
+					<a href="fale_conosco.html">Avalie o site</a>
 				</div>
 			</div>
 		</header>
@@ -28,7 +28,7 @@
 		<!--Conteúdo-->
 		<div id="fale_conosco">
 			<div class="container">
-				<h1>Feedback</h1>
+				<h1>Nos mande sua avaliação!</h1>
 				
 				<div class="efeito">
 					<p>
