--- a/HTML_gK/criadores.html
+++ b/HTML_gK/criadores.html
@@ -20,7 +20,7 @@
 					<a href="index.html">Home</a>
 					<a href="criadores.html">Desenvolvedores</a>
 					<a href="listar.php">Servidores Públicos</a>
-					<a href="fale_conosco.html">Avalie o site</a>
+					<a href="fale_conosco.php">Avalie o site</a>
 				</div>
 			</div>
 		</header>
